--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-jest": "25.5.1",
     "eslint": "6.8.0",
     "jest": "25.5.4",
-    "jetifier": "1.6.6",
+    "jetifier": "^1.6.6",
     "metro-react-native-babel-preset": "0.59.0",
     "react-test-renderer": "16.13.1"
   },
